[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "sre-incident-response-env"
version         = "1.0.0"
description     = "SRE Incident Response OpenEnv — real-world production triage for RL agents"
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "MIT" }
keywords        = ["openenv", "rl", "sre", "devops", "incident-response"]

dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.6.4",
    "openai==1.23.0",
    "requests==2.31.0",
    "PyYAML==6.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["*"]
exclude = ["__pycache__", "*.pyc", ".git"]
